$Id$

2017-02-20  Christian Franke  <franke@computer.org>

	os_win32.cpp: Rework CSMI port mapping.  This fixes access to
	ports != 0 behind IRST driver 15.2 (ticket #804).

2017-01-30  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: unblock 48bit ATACAM commands for the legacy controllers
	if FreeBSD version is >= 9.2-RELEASE, tested on FreeBSD 10.3

2017-01-28  Christian Franke  <franke@computer.org>

	ataidentify.cpp: Don't shift negative values
	(g++ 6.3: -Wshift-negative-value, cppcheck 1.77: shiftNegativeLHS).

	os_win32.cpp, scsiata.cpp, scsicmds.cpp, scsiprint.cpp: Fix 'if'
	and 'else' clause indentations (g++ 6.3: -Wmisleading-indentation).

	Add indent style configuration for EditorConfig
	(http://editorconfig.org/):
	.editorconfig: New file.
	Makefile.am: Add new file to source tarball.

2017-01-21  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Marvell based SanDisk SSDs: X300 OEM (ticket #747),
	  X400 (ticket #715), Ultra II (ticket #744)
	- USB: Renesas uPD720231A (0x045b:0x0229)
	- USB: Maxtor D3 Station 5TB (0x0bc2:0x6126)
	- USB: Seagate Backup Plus 8TB (0x0bc2:0xab38) (ticket #786)
	- USB: WD Elements / My Passport (0x1058:0x107d) (ticket #772)
	- USB: WD Elements / My Passport (0x1058:0x25a1) (ticket #773)
	- USB: WD My Book 4TB (0x1058:0x25a3) (ticket #784)
	- USB: WD Elements / My Passport: Merge entries
	- USB: WD My Book: Merge entries

2017-01-14  Christian Franke  <franke@computer.org>

	scsiata.cpp: Remove redundant assignment
	(cppcheck: redundantAssignment).

	ataprint.cpp, ataprint.h, smartctl.cpp, smartctl.8.in:
	Add STATUS parameter to '-n POWERMODE' option (ticket #697).

2017-01-13  Christian Franke  <franke@computer.org>

	configure.ac: Rework CXXFLAGS settings, use shell intrinsics.

	os_win32.cpp: Fix harmless buffer overflow bug
	(found by VC14 code analyser).

2017-01-12  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Innodisk 1ME3/3ME/3SE SSDs: Rename, add 1ME3 (ticket #713), 3SE