@@ -2,6 +2,8 @@ $Id$
 
 2017-02-20  Christian Franke  <franke@computer.org>
 
+	os_win32.cpp: Decode Windows Server 2016 build number.
+
 	os_win32.cpp: Rework CSMI port mapping.  This fixes access to
 	ports != 0 behind IRST driver 15.2 (ticket #804).
 
